Updated home.jsp and err.jsp

--- a/web/src/main/webapp/err.html
+++ b/web/src/main/webapp/err.html
@@ -1,9 +1,8 @@
-<%@ page import="com.capgemini.heskuelita.core.beans.User" contentType="text/html;charset=UTF-8" language="java" %>
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="US-ASCII">
-    <title>Home</title>
+    <title>Login Error</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -17,11 +16,10 @@
 	<div class="modal-dialog text-center">
 		<div class="col-sm-8 main-section">
 			<div class="modal-content">
-				<h2>Welcome Home</h2>
-				<%User us = (User)session.getAttribute ("user");%>
-				<!--<img class="img2" src="img/alert.png">-->
-				<p>Your username is <%=us.getUserName() + " and your password is " + us.getPassword()%></p>
-				<a href="index.jsp"><button class="btn"><i class="fas fa-sign-out-alt"></i>Log out</button></a>
+				<h2>Failed to log in</h2>
+				<img class="img2" src="img/alert.png">
+				<p>Non existent user, or password might be incorrect</p>
+				<a href="Registration.jsp"><button class="btn">Register</button></a>
 			</div>
 		</div>
 	</div>
